Update project title for real estate CRM
Shortened the title of the real estate CRM project.

--- a/content/projects/real-estate-crm.mdx
+++ b/content/projects/real-estate-crm.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Custom Real Estate CRM SaaS — Dashboards, RBAC, Gmail, Secure, Deploy"
+title: "Custom Real Estate CRM SaaS"
 date: "2025-10-15"
 description: "Custom CRM SaaS for real estate deal and contact management. Transformed Lovable AI mockups into secure, scalable dashboards with full backend logic and interactive UI."
 cover: "/images/projects/closalty01.jpg"
