Update title for Ghost CMS Management project

--- a/content/projects/ghost-cms-management.mdx
+++ b/content/projects/ghost-cms-management.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Ghost CMS Management"
+title: "Ghost CMS Management - Political Blog"
 date: "2026-01-15"
 description: "Frontend Improvements for Ghost Blog – TheSinic. Applied HTML & CSS fixes, added author boxes, and integrated sidebar layouts for a modern look."
 cover: "/images/projects/thesinicfirst.png"
